Make more mobile-friendly

--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
         <div id="root">
             <div class="container">
                 <div class="row">
-                    <div class="col-3"></div>
-                    <div class="col-6 my-5 p-3" id="main-col">
+                    <div class="col-sm-3 col-0"></div>
+                    <div
+                        class="col-sm-6 col-12 my-sm-5 my-0 p-sm-3 p-2"
+                        id="main-col"
+                    >
                         <h1>Quinn Pfeifer</h1>
-                        <div class="row p-3">
+                        <div class="row p-sm-3 p-2">
                             <div class="col-4">
                                 <img
                                     src="images/v-pills-home-tab.jpg"
@@ -28,7 +31,7 @@
                                     id="main-img"
                                 />
                                 <div
-                                    class="nav flex-column nav-pills"
+                                    class="nav flex-column nav-pills text-break"
                                     id="v-pills-tab"
                                     role="tablist"
                                     aria-orientation="vertical"
@@ -1972,7 +1975,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3"></div>
+                    <div class="col-sm-3 col-0"></div>
                 </div>
             </div>
         </div>
