--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <div class="row p-sm-3 p-2">
                             <div class="col-4">
                                 <img
-                                    src="images/v-pills-home-tab.jpg"
+                                    src="images/home.jpg"
                                     class="img-fluid my-3"
                                     id="main-img"
                                 />
@@ -62,16 +62,78 @@
                                     </button>
                                     <button
                                         class="nav-link"
-                                        id="v-pills-robotics-tab"
+                                        id="v-pills-research-tab"
                                         data-bs-toggle="pill"
-                                        data-bs-target="#v-pills-robotics"
+                                        data-bs-target="#v-pills-research"
                                         type="button"
                                         role="tab"
-                                        aria-controls="v-pills-robotics"
+                                        aria-controls="v-pills-research"
                                         aria-selected="false"
                                     >
-                                        Robotics
+                                        Research
                                     </button>
+                                    <div
+                                        class="accordion"
+                                        id="roboticsAccordion"
+                                    >
+                                        <div class="accordion-item">
+                                            <button
+                                                class="nav-link collapsed"
+                                                id="v-pills-robotics-tab"
+                                                data-bs-toggle="collapse"
+                                                data-bs-target="#roboticsCollapse"
+                                                aria-expanded="false"
+                                                aria-controls="roboticsCollapse"
+                                            >
+                                                Robotics
+                                            </button>
+                                            <div
+                                                id="roboticsCollapse"
+                                                class="accordion-collapse collapse"
+                                                aria-labelledby="v-pills-robotics-tab"
+                                                data-bs-parent="#roboticsAccordion"
+                                            >
+                                                <div class="accordion-body">
+                                                    <button
+                                                        class="nav-link"
+                                                        id="v-pills-first-tab"
+                                                        data-bs-toggle="pill"
+                                                        data-bs-target="#v-pills-first"
+                                                        type="button"
+                                                        role="tab"
+                                                        aria-controls="v-pills-first"
+                                                        aria-selected="false"
+                                                    >
+                                                        FIRST
+                                                    </button>
+                                                    <button
+                                                        class="nav-link"
+                                                        id="v-pills-mars-tab"
+                                                        data-bs-toggle="pill"
+                                                        data-bs-target="#v-pills-mars"
+                                                        type="button"
+                                                        role="tab"
+                                                        aria-controls="v-pills-mars"
+                                                        aria-selected="false"
+                                                    >
+                                                        Mars Rovers
+                                                    </button>
+                                                    <button
+                                                        class="nav-link"
+                                                        id="v-pills-rovs-tab"
+                                                        data-bs-toggle="pill"
+                                                        data-bs-target="#v-pills-rovs"
+                                                        type="button"
+                                                        role="tab"
+                                                        aria-controls="v-pills-rovs"
+                                                        aria-selected="false"
+                                                    >
+                                                        ROVs
+                                                    </button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                     <button
                                         class="nav-link"
                                         id="v-pills-volunteering-tab"
@@ -191,9 +253,37 @@
                                     ></div>
                                     <div
                                         class="tab-pane fade"
+                                        id="v-pills-research"
+                                        role="tabpanel"
+                                        aria-labelledby="v-pills-research-tab"
+                                        tabindex="0"
+                                    ></div>
+                                    <div
+                                        class="tab-pane fade"
                                         id="v-pills-robotics"
                                         role="tabpanel"
                                         aria-labelledby="v-pills-robotics-tab"
+                                        tabindex="0"
+                                    ></div>
+                                    <div
+                                        class="tab-pane fade"
+                                        id="v-pills-first"
+                                        role="tabpanel"
+                                        aria-labelledby="v-pills-first-tab"
+                                        tabindex="0"
+                                    ></div>
+                                    <div
+                                        class="tab-pane fade"
+                                        id="v-pills-mars"
+                                        role="tabpanel"
+                                        aria-labelledby="v-pills-mars-tab"
+                                        tabindex="0"
+                                    ></div>
+                                    <div
+                                        class="tab-pane fade"
+                                        id="v-pills-rovs"
+                                        role="tabpanel"
+                                        aria-labelledby="v-pills-rovs-tab"
                                         tabindex="0"
                                     ></div>
                                     <div
