--- a/pages/first.html
+++ b/pages/first.html
@@ -1,9 +1,10 @@
-<h4>Robotics</h4>
+<h4>FIRST Robotics</h4>
 <p>
-    I have been a part of a robotics team since 5th grade, all through
-    <strong>FIRST</strong>. For the first 4 years, I participated in
-    <strong>FLL</strong>, which is a program for younger students to learn the
-    basics of designing, building, and programming a small LEGO robot.<br /><br />
+    From 5th to 12th grade, I participated in
+    <strong>FIRST</strong> robotics competitions. For the first 4 years, I
+    participated in <strong>FLL</strong>, which is a program for younger
+    students to learn the basics of designing, building, and programming a small
+    LEGO robot.<br />
 
     However, the most impactful experience I've had with robotics was during my
     time in high school when I joined
@@ -17,19 +18,20 @@
     <strong>mentors</strong> who are experts in their respective industries. We
     had mechanical mentors from Boeing, software mentors from Microsoft, etc. To
     see a list of skills I picked up with my time on this team, see
-    <em>Skills</em>.<br /><br />
+    <em>Skills</em>.<br />
 
     To see some of the software-specific awards and awards I received in the
     context of this team, see
-    <em>Awards</em>.<br /><br />
+    <em>Awards</em>.<br />
 </p>
 
 <h5>Media</h5>
-<a href="https://www.youtube.com/c/FRCTeam2910JackintheBot">Here</a>
 <p>
+    <a href="https://www.youtube.com/c/FRCTeam2910JackintheBot">Here</a>
     is a link to the team's YouTube channel, many videos featuring me! Here are
-    a few selected videos.<br /><br />
+    a few selected videos.
 </p>
+<br />
 
 <iframe
     width="100%"
@@ -39,12 +41,13 @@
     frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
     allowfullscreen
-></iframe>
+></iframe
+><br />
 <p>
     Here is a video of our 2022 robot performing very highly in the
     <em>autonomous period</em>, a period in which the robot runs exclusively on
     software. I wrote the code running in this video. Our bot was one of the
-    only in the world that could perform this "6-Ball Auto".<br /><br />
+    only in the world that could perform this "6-Ball Auto".<br />
 </p>
 
 <iframe
@@ -56,7 +59,7 @@
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
     allowfullscreen
 ></iframe>
-<p>Here is our 2023 robot reveal video.<br /><br /></p>
+<p>Here is our 2023 robot reveal video.</p>
 <iframe
     width="100%"
     height="225"
