--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         <div id="root">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-3 col-0"></div>
+                    <div class="col-lg-3 col-0"></div>
                     <div
-                        class="col-sm-6 col-12 my-sm-5 my-0 p-sm-3 p-2"
+                        class="col-lg-6 col-12 my-lg-5 my-0 p-lg-3 p-2"
                         id="main-col"
                     >
                         <h1>Quinn Pfeifer</h1>
-                        <div class="row p-sm-3 p-2">
+                        <div class="row p-lg-3 p-2">
                             <div class="col-4">
                                 <img
                                     src="images/home.jpg"
@@ -346,7 +346,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3 col-0"></div>
+                    <div class="col-lg-3 col-0"></div>
                 </div>
             </div>
         </div>
