Finish up update

--- a/pages/academics.html
+++ b/pages/academics.html
@@ -1,18 +1,18 @@
 <h4>Academics</h4>
 <p>
     A major focus of my life has been my academics. I really enjoy learning,
-    especially when it comes to STEM fields.<br /><br />
+    especially when it comes to STEM fields.<br />
 
     In my Junior year of high school, I decided to take part in my school's
     <strong>Running Start</strong> program. I went full-time my Senior year, and
     in total, I had enough college credits to graduate with an Associate degree
-    simultaneously with my high school graduation.<br /><br />
+    simultaneously with my high school graduation.<br />
 
     Additionally, I maintained a perfect
     <strong>4.0 GPA</strong> in both my high school and Running Start courses.
     This earned me the title of <strong>Valedictorian</strong> with my high
     school, and earned me the <strong>President's Distinction</strong> at my
-    Running Start college.<br /><br />
+    Running Start college.<br />
 </p>
 
 <h5>History</h5>
@@ -21,16 +21,17 @@
     <strong>Henry M. Jackson High School</strong><br />
     September 2019 - June 2023<br />
     4.0 GPA<br />
-    Valedictorian<br /><br />
+    Valedictorian<br />
     <img src="images/evcc.png" class="img-fluid my-3" />
     <strong>Everett Community College</strong> (Running Start)<br />
     September 2021 - June 2023<br />
     4.0 GPA<br />
-    Associate degree<br />
-    President's Distinction<br /><br />
+    Two full years of college credit<br />
+    President's Distinction<br />
     <img src="images/uw.jpg" class="img-fluid my-3" />
     <strong>University of Washington</strong><br />
-    Paul G. Allen School of Computer Science<br /><br />
+    Paul G. Allen School of Computer Science<br />
+    Dean's List all quarters<br />
 </p>
 
 <h5>Test Scores</h5>
@@ -39,13 +40,13 @@
     <strong>AP World History</strong> - 5<br />
     <strong>AP United States History</strong> - 5<br />
     <strong>AP Environmental Science</strong> - 5<br />
-    <strong>AP Physics</strong> - 4<br /><br />
+    <strong>AP Physics</strong> - 4<br />
 </p>
 
 <h5>Classes</h5>
 <p>
     To see a more synthesized list of notable courses I've taken, see
-    <em>Skills</em>.<br /><br />
+    <em>Skills</em>.<br />
 </p>
 
 <h5>Transcripts</h5>
