--- a/pages/first.html
+++ b/pages/first.html
@@ -71,7 +71,7 @@
 ></iframe>
 <p>
     Here is more autonomous work. In this video, our two robots simultaneously
-    run separate autonomous periods.<br /><br />
+    run separate autonomous periods.<br />
 </p>
 
 <iframe
@@ -86,7 +86,7 @@
 <p>
     In this video, our robot uses
     <strong>computer vision</strong> and <strong>PID controllers</strong> to
-    automatically align with the scoring nodes. I wrote this code.<br /><br />
+    automatically align with the scoring nodes. I wrote this code.<br />
 </p>
 
 <iframe
@@ -98,9 +98,7 @@
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
     allowfullscreen
 ></iframe>
-<p>
-    This is an interview I did along with a few members of my team.<br /><br />
-</p>
+<p>This is an interview I did along with a few members of my team.<br /></p>
 
 <iframe
     width="100%"
@@ -111,9 +109,7 @@
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
     allowfullscreen
 ></iframe>
-<p>
-    Here's a video of me and my teammates driving a robot in a match.<br /><br />
-</p>
+<p>Here's a video of me and my teammates driving a robot in a match.<br /></p>
 
 <h5>Competitions</h5>
 <img src="images/2022.jpg" class="img-fluid my-3" />
