--- a/pages/job.html
+++ b/pages/job.html
@@ -1,9 +1,8 @@
 <h4>Job History</h4>
 <p>
     <strong>
-        <a href="(https://www.codingwithkids.com/)"
-            >Coding With Kids</a
-        > </strong
+        <a href="(https://www.codingwithkids.com/)">Coding With Kids</a
+        ><br />Computer Science Tutor</strong
     ><br />
     <em>August 2021 - April 2023</em><br />
     At this job, I worked as a computer science tutor with young children and
@@ -11,4 +10,14 @@
     to introduce them to basic programming concepts. I worked with ages from
     pre-school to middle, and I learned a ton about lesson planning and
     leadership.
+</p>
+
+<p>
+    <strong>
+        <a href="(https://www.nintendo.com/us/)">Nintendo</a><br />Platform
+        Engineering Intern</strong
+    ><br />
+    <em>Summer 2024</em><br />
+    I am excited to announce I will be interning at Nintendo of America this
+    summer as their Platform Engineering Intern!!
 </p>
