--- a/pages/skills.html
+++ b/pages/skills.html
@@ -13,6 +13,12 @@
     >. This course covered a large variety of fundamental CS topics, such Big O
     notation, trees, graphs, sorting algorithms, and many other data
     structures.<br /><br />
+
+    At the University of Washington, I have taken or am currently taking
+    <strong>CSE 311, 312, 331, 332, and 351</strong>. These are all the
+    fundamental 300-level classes and cover writing industry-level code, data
+    structures, proofs, stastics, web development, machine-level code,
+    parallelism, and much more.
 </p>
 
 <h5>Web Development</h5>
@@ -20,11 +26,11 @@
     I taught myself full-stack web development. I consider myself proficient in
     using tools like
     <strong
-        >HTML, CSS, EJS, Bootstrap, JavaScript, jQuery, React, Node.js,
-        Express.js, MongoDB and Mongoose</strong
+        >HTML, CSS, EJS, Bootstrap, JavaScript, TypeScript, jQuery, React,
+        Node.js, Express.js, MongoDB and Mongoose</strong
     >. Additionally, I have much experience in
     <strong>interfacing with APIs</strong>. See <em>Contact</em> for a link to
-    my GitHub where some of my web development work is hosted.<br /><br />
+    my GitHub where some of my web development work is hosted.<br />
 </p>
 
 <h5>Robotics</h5>
@@ -48,7 +54,22 @@
     I even learned how to program
     <strong>Android apps</strong> for use in our "scouting app", which makes use
     of QR codes to wirelessly transfer data about other robots, collected
-    through the app by "scouts".<br /><br />
+    through the app by "scouts".<br />
+</p>
+
+<h5>Other Hard Skills</h5>
+<p>
+    I am comfortable with all the above Web Development languages,
+    <strong>Java</strong>, <strong>C++</strong>, and <strong>Python</strong>. I
+    am very familiar with a wide array of
+    <strong>Machine Learning concepts</strong> through my time doing Research
+    with the Allen School (see <em>Research</em>!). I am also familiar using
+    <strong>Linux-based operating systems</strong> including extensive
+    experience with the <strong>command line</strong>. I have had
+    <em>very</em> extensive in teams and in team leadership positions, and with
+    that, I have gotten very comfortable managing Version Control through
+    <strong>git</strong> along with <strong>Pull Request review</strong> and
+    <strong>project management via GitHub</strong>.
 </p>
 
 <h5>Soft Skills</h5>
@@ -61,7 +82,7 @@
     <strong>conflict resolution</strong>. Robotics is also very fast-paced,
     demanding strong <strong>planning</strong> and
     <strong>communication</strong>
-    skills<br /><br />
+    skills<br />
 
     Additionally, as a student, I've gotten very good at
     <strong>time-management</strong>, <strong>critical-thinking</strong>, and
