--- a/pages/volunteering.html
+++ b/pages/volunteering.html
@@ -8,7 +8,7 @@
     students there, and I loved being able to give back to the community that
     gave so much to me. These competitions are generally full-day events, so
     I've likely spent cumulatively 100-200 hours volunteering for FIRST. Below
-    is a list of roles I've filled.<br /><br />
+    is a list of roles I've filled.<br />
 </p>
 
 <h4>Roles</h4>
@@ -18,26 +18,26 @@
     or time for them to present a project in front of a panel of judges. As a
     Queuer, you make sure every team gets where they need to be. It involves
     working collaboratively with a large group of other Queuers to ensure a
-    competition runs smoothly.<br /><br />
+    competition runs smoothly.<br />
 
     <strong>Set-up and tear-down</strong><br />
     These play-fields can be very in-depth. At the level of FRC, they are
     generally the size of a basketball court, and there are often multiple
     fields. Essentially, you have to turn a school's gymnasium into an arena for
     these games along with a "pit" area where teams stay between matches. I've
-    spent much time helping set-up and tear-down these events.<br /><br />
+    spent much time helping set-up and tear-down these events.<br />
 
     <strong>Judge</strong><br />
     At earlier levels of FIRST, students are tasked to come up with some
     STEM-related solution to a world dilemma, such as producing clean energy or
     transportation. They create a presentation and present it to a board of
-    "judges" who grade their solution. I volunteered as one of these judges.<br /><br />
+    "judges" who grade their solution. I volunteered as one of these judges.<br />
 
     <strong>Referee</strong><br />
     It's imperative to ensure that all rules are being followed to a T during
     robotics matches. I filled the role of a referee, ensuring that all teams
     were playing the game as intended. This is important to ensure the creation
-    of a playing field that feels level and fair.<br /><br />
+    of a playing field that feels level and fair.<br />
 </p>
 
 <h5>Outreach</h5>
@@ -45,7 +45,7 @@
     In my time on my robotics team, I participated in many "outreach" events in
     which we bring our robot to an event or location and demonstrate its
     abilities. The goal of these events is to instill interest in STEM to
-    children who may not have had much exposure to the field.<br /><br />
+    children who may not have had much exposure to the field.<br />
 
     My team and I went to the
     <strong>Imagine Children's Museum</strong>
