--- a/pages/contact.html
+++ b/pages/contact.html
@@ -49,7 +49,7 @@
 <p>
     This form will open a "mailto:" link, which should open in your default
     email application. If that doesn't work, feel free to contact me directly at
-    <strong>quinnpfeifer@icloud.com</strong><br /><br />
+    <strong>quinnpfeifer@icloud.com</strong><br />
 </p>
 
 <h5>Other Platforms</h5>
