--- a/pages/home.html
+++ b/pages/home.html
@@ -8,9 +8,14 @@
     Think of this website as a sort of online résumé, along with a way to get to
     know me better! <br /><br />
 
-    To check out my academic history and test scores, see <em>Academics</em>.
-    <br /><br />
-    To hear about my experience with <strong>robots</strong>, see
+    To check out my a<strong>cademic history</strong> and test scores, see
+    <em>Academics</em>. <br /><br />
+
+    To learn more about my time as an
+    <strong>Undergraduate Research Assisstant</strong> in Robotics at the Paul
+    G. Allen School at UW, see <em>Research</em>. <br /><br />
+
+    To hear about my experience on various <strong>robotics teams</strong>, see
     <em>Robotics</em>. <br /><br />
 
     To learn about my <strong>volunteering experience</strong> in STEM, see
