--- a/pages/projects.html
+++ b/pages/projects.html
@@ -9,20 +9,20 @@
     See <em>Robotics</em> for more information. I worked very closely with this
     code, I wrote probably 80-90% of it, as our programming team was small this
     year. This code won multiple awards and brought our robot to a 3rd place
-    victory at the world championship.<br /><br />
+    victory at the world championship.<br />
 </p>
 
 <img src="images/2023.jpg" class="img-fluid my-3" />
 <h5>
-    <a href="https://github.com/FRCTeam2910/2023CompetitionRobot"
-        >2023 Robot Code (Public Soon!)</a
+    <a href="https://github.com/FRCTeam2910/2023CompetitionRobot-Public"
+        >2023 Robot Code</a
     >
 </h5>
 <p>
     This code I wrote much less of. That's because our programming team grew
     quite large and I took on a much more logistics-based role, overseeing and
     mentoring less experienced programmers. This code also won an award and
-    brought our team many 1st place victories.<br /><br />
+    brought our team many 1st place victories.<br />
 </p>
 
 <img src="images/SongScribe.png" class="img-fluid my-3" />
@@ -33,7 +33,7 @@
     This is a React-based website that makes use of the Spotify and Genius
     Lyrics APIs to create an environment in which users can take notes on songs
     as they listen to them. There are too many features to name here, see the
-    README.md in the repository. It makes use of MongoDB to store user notes.<br /><br />
+    README.md in the repository. It makes use of MongoDB to store user notes.<br />
 </p>
 
 <img src="images/MILES.png" class="img-fluid my-3" />
@@ -44,7 +44,7 @@
     This is a blog I made to host my reviews of albums. I loaded this with
     features, such as timestamp buttons which make use of the YouTube API which
     allows users to listen to sections of songs embedded into the review. This
-    also uses MongoDB to store reviews.<br /><br />
+    also uses MongoDB to store reviews.<br />
 </p>
 
 <img src="images/picASCIIo.png" class="img-fluid my-3" />
