--- a/pages/rovs.html
+++ b/pages/rovs.html
@@ -1,8 +1,11 @@
 <h4>UWROV</h4>
 <p>
     Very similar to <strong>Husky Robotics</strong>, I immediately applied to
-    the <strong>Underwater Remotely Operated Vehicles Team</strong> as soon as I
-    could. This team focuses on underwater robots and is a
+    the
+    <a href="https://uwrov.org/"
+        ><strong>Underwater Remotely Operated Vehicles Team</strong></a
+    >
+    as soon as I could. This team focuses on underwater robots and is a
     <strong>world-class team</strong> in terms of robot performance and
     documentation.<br />
     My role as a software developer on this team has largely been in the realm
