Fix un-bolded "a"

--- a/pages/home.html
+++ b/pages/home.html
@@ -8,7 +8,7 @@
     Think of this website as a sort of online résumé, along with a way to get to
     know me better! <br /><br />
 
-    To check out my a<strong>cademic history</strong> and test scores, see
+    To check out my <strong>academic history</strong> and test scores, see
     <em>Academics</em>. <br /><br />
 
     To learn more about my time as an
